--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@
     background-color: #1f2937;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 20px 100px 100px 100px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;/*allows content to stack on smaller screen*/
    
    /*FONT ROBOTO HAS TO BE USED FOR ALL EXCEPT THE LAST SECTION*/
@@ -58,6 +62,12 @@
 }
 #section-1 #middle-section #right-side #image-placeholder{
     background-color: grey;
+}
+#section-1 #middle-section #right-side #image-placeholder img{
+    width: 400px;
+    height: 400px;
+    border-radius: 5px;
+    border: 3px solid #3882F6;
 }
 
 
